fix: don't enlarge the clone-panel on mobile (#9447)
This is a short CSS fix for "mobile" devices (being screen-width < 390px) where the clone panel would not get smaller than 370px and thus causes an ugly overflow which also leads to the page being wider than view when loaded and thus causes the page to weirdly bounce a bit left and right when scrolling.

The 390px mark was chosen because that's exactly the point where, with padding, the panel stops having a usable size.

Reviewed-on: https://codeberg.org/forgejo/forgejo/pulls/9447
Co-committed-by: DasLixou <einlixou@gmail.com>

--- a/web_src/css/repo.css
+++ b/web_src/css/repo.css
@@ -140,6 +140,13 @@
   }
 }
 
+@media (max-width: 390px) {
+  .repository .clone-panel #repo-clone-url {
+    width: 0;
+    flex-grow: 1;
+  }
+}
+
 .repository .ui.action.input.clone-panel > button + button,
 .repository .ui.action.input.clone-panel > button + input {
   margin-left: -1px; /* make the borders overlap to avoid double borders */
